<resources>
    <string name="app_name">ControlProd</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_prendas">Group Items</string>
    <string name="title_activity_sub_items">SubItems Items</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_item_status">Item Status</string>
    <string name="imei">Imei</string>
    <string name="usuario">User</string>
    <string name="contrasena">Password</string>
    <string name="enviar">Send</string>
    <string name="sincronizar">Synchronize</string>
    <string name="ingresar">LogIn</string>
    <string name="limpiar">Clear</string>
    <string name="extras">Extra Jobs</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="out">Out</string>
    <string name="view">View</string>
    <string name="email">Email</string>
    <string name="continue_">CONTINUE</string>
    <string name="elijaDificultad">Choose level of difficulty</string>
    <string name="_break">Break</string>
    <string name="_breakStart1">Break#1\n has begun</string>
    <string name="_breakEnd1">Break#1\n is over</string>
    <string name="_breakStart2">Break#2\n has begun</string>
    <string name="_breakEnd2">Break#2\n is over</string>
    <string name="lunch">Lunch</string>
    <string name="lunchStart">Lunch \n has begun</string>
    <string name="lunchEnd">Lunch \n is over</string>
    <string name="validate">Validate</string>
    <string name="buscar">Barcode</string>
    <string name="codigo">Code</string>
    <string name="quality_control">Quality Control</string>
    <string name="realternation">Re-Alteration</string>
    <string name="extrajob">Extra Jobs</string>
    <string name="unico">Unico</string>
    <string name="tipocliente">Customer Type</string>
    <string name="codcliente">Customer Code</string>
    <string name="subitem">Sub Item</string>
    <string name="itemsubitem">Item - Sub Item</string>
    <string name="cantidad_">Quantity</string>
    <string name="subtotal">SubTotal</string>
    <string name="codbarra">BarCode</string>
    <string name="staff">Staff</string>
    <string name="nombrecliente">Customer</string>
    <string name="fechareq">Required Date</string>
    <string name="customer">Customer</string>
    <string name="docket">Docket</string>
    <string name="cantidad">Quantity</string>
    <string name="guardar">Save</string>
    <string name="tipo">Type</string>
    <string name="iddetalle">Detail Id</string>
    <string name="seleccionar">Select</string>
    <string name="actualizar">Update Data</string>
    <string name="cerrar">Exit</string>
    <string name="borrar">Delete</string>
    <string name="confirmacion">Do you want to continue?</string>
    <string name="confirmacionEliminar">Delete</string>
    <string name="aceptar">Continue</string>
    <string name="cancelar">Cancel</string>
    <string name="total_">Total: </string>
    <string name="ingreseDocket">BarCode</string>
    <string name="validandoUsuario">User Validation</string>
    <string name="sincronizandoDatos">Data Synchronization</string>
    <string name="sincronizacionExtiosa">Synchronized</string>
    <string name="ingreseSusDatos">Enter your details</string>
    <string name="ingreseCantidad">Quantity</string>
    <string name="m1">MIS01</string>
    <string name="total_time">Total Time</string>
    <string name="descripcion">Description</string>
    <string name="pg1">Deleting...</string>
    <string name="pg2">Processing...</string>
    <string name="pg3">Logging in...</string>
    <string name="oficina1">An office output has already been registered</string>
    <string name="oficina2">You havent registered income in the office</string>
    <string name="back">Press BACK again to exit</string>
    <string name="exitos1">Data deleted</string>
    <string name="exitos2">Re-Alteration done</string>
    <string name="exitos3">Data sent</string>
    <string name="exitos4">QualityControl done</string>
    <string name="seleccioneUsuario">Select Staff</string>
    <string name="seleccioneDocket">BarCode</string>
    <string name="credentials">Save Credentials</string>
    <string name="error1">An error has occurred, try again</string>
    <string name="error2">Select a data, and try again</string>
    <string name="error3">The data entered is incorrect</string>
    <string name="error4">You must select a docket</string>
    <string name="error5">No data has been found</string>
    <string name="error6">No items to show in this view</string>
    <string name="error7">You must enter all data</string>
    <string name="error8">Synchronization failed</string>
    <string name="error9">Select a date, and try again</string>
    <string name="title_activity_view">View</string>
    <string name="containsExtra">EXTRA</string>
    <string name="nomgrupo">Group Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="docketName">Docket name</string>
    <string name="continueExtraJob">Do you want to continue working on a paused Extra Job?</string>
    <string name="personalData">Personal Data</string>
    <string name="marcarTodo">Check All</string>
    <string name="desmarcarTodo">Uncheck All</string>
    <string name="insertarFecha">Insert ID</string>
    <string name="fechaFormato">Insert ID</string>
    <string name="nic">Nic:\t\t</string>
    <string name="inserteCantidad">Insert Quantity</string>
    <string name="extraerbd">Extraer Base</string>
    <string name="subirbd">Subir Base</string>
    <string name="additionalemail">Additional Emails: </string>
    <string name="emailinfo">If there are multiples emails, you must separate them with a ,</string>
</resources>
