<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_buscar_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/imageView_eliminar"
        android:layout_alignRight="@+id/btn_eliminar_dockets"
        android:layout_alignEnd="@+id/btn_eliminar_dockets">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_buscar_eliminar"
            android:inputType="text"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView_eliminar"
            android:layout_marginTop="5dp"
            android:hint="@string/buscar"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_eliminar"
        android:src="@drawable/find"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout4" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        android:id="@+id/btn_eliminar_dockets"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/boton_selector"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/input_buscar_eliminar"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/codbarra"
            android:id="@+id/textView"
            android:layout_weight="0.8"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fechareq"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/customer"
            android:id="@+id/textView60"
            android:layout_weight="1"
            android:gravity="center"
            android:autoText="false"
            android:background="@drawable/button_border"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/itemsubitem"
            android:id="@+id/textView8"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cantidad_"
            android:id="@+id/textView9"
            android:layout_weight="0.7"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/total_time"
            android:id="@+id/textView62"
            android:layout_weight="0.5"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="R"
            android:id="@+id/textView86"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/button_border"/>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/lv_eliminar"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:listSelector="@drawable/list_selector"
        android:layout_above="@+id/btn_eliminar_dockets"
        android:layout_below="@+id/linearLayout4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_total_2"
        android:layout_alignTop="@+id/input_buscar_eliminar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/input_buscar_eliminar"
        android:layout_toEndOf="@+id/input_buscar_eliminar"
        android:layout_alignBottom="@+id/input_buscar_eliminar"
        android:gravity="center" />

</RelativeLayout>