<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_buscar_qclv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView_qclv"
        android:layout_alignRight="@+id/btn_seleccionar_qlcv"
        android:layout_alignEnd="@+id/btn_seleccionar_qlcv">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_buscar_qclv"
            android:inputType="text"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageView_qclv"
            android:layout_marginTop="5dp"
            android:hint="@string/buscar"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_qclv"
        android:src="@drawable/find"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tv_total_9"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_total_9"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/input_buscar_qclv"
        android:layout_toEndOf="@+id/input_buscar_qclv"
        android:layout_above="@+id/linearLayout8"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout8"
        android:layout_below="@+id/input_buscar_qclv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/docket"
            android:id="@+id/textView80"
            android:layout_weight="1.5"
            android:gravity="center"
            android:background="@drawable/button_border"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/textView84"
            android:layout_weight="2"
            android:text="@string/fechareq"
            android:gravity="center"
            android:background="@drawable/button_border" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nombrecliente"
            android:id="@+id/textView81"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@drawable/button_border"/>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/lv_qclv"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:listSelector="@drawable/list_selector"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/btn_seleccionar_qlcv" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar"
        android:id="@+id/btn_seleccionar_qlcv"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:background="@drawable/boton_selector"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp" />


</RelativeLayout>