<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_buscar_realteration"
            android:inputType="text"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_alignRight="@+id/btn_realteration"
            android:layout_alignEnd="@+id/btn_realteration"
            android:layout_toEndOf="@+id/imageView_realteration"
            android:layout_alignLeft="@+id/linearLayout5"
            android:layout_alignStart="@+id/linearLayout5"
            android:textSize="16sp"
            android:gravity="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar"
        android:id="@+id/btn_realteration"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/boton_selector"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/lv_realteration"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:layout_centerHorizontal="true"
        android:listSelector="@drawable/list_selector"
        android:layout_above="@+id/btn_realteration"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_total_3"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linearLayout5"
        android:gravity="center"
        android:layout_alignRight="@+id/linearLayout5"
        android:layout_alignEnd="@+id/linearLayout5"
        android:layout_toRightOf="@+id/et_buscar_realteration"
        android:layout_toEndOf="@+id/et_buscar_realteration" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout5"
        android:layout_below="@+id/et_buscar_realteration"
        android:layout_alignLeft="@+id/lv_realteration"
        android:layout_alignStart="@+id/lv_realteration">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/subitem"
            android:id="@+id/tView2"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_border" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nomgrupo"
            android:id="@+id/textView61"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_border"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cantidad_"
            android:id="@+id/tView9"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_border" />

    </LinearLayout>

</RelativeLayout>